[project]
name = "miu-logger"
version = "0.1.6"
description = "Multiprocessing-safe domain-based logging framework with QueueListener architecture"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Bruno Miura", email = "brumiura@gmail.com" }
]
keywords = ["logging", "multiprocessing", "queue", "structured-logging", "python-logging"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]

dependencies = [
    "colorama"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
